# pipe-syncer

./: .gitignore  README.md  apply.py  config.py  config.yaml  pyproject.toml  sync.py  utils.py
tests/: apply_test.py
